# gametime_watcher

./: .bumpversion.cfg  AGENTS.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: test_and_release.yml
docs/: api.html  cli.html  filters.html  index.html  models.html
gametime_watcher/: __init__.py  __main__.py  api.py  cli.py  filters.py  models.py
tests/: test_api.py  test_cli.py  test_filters.py  test_search.py
tests/fixtures/: event_page.html
